# JukkaBot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
resources/prompts/: ragebait_chat_prompt.txt
src/jukkabot/: __init__.py  __main__.py  bot.py  config.py  models.py  music_service.py  openai_service.py  queue_manager.py  tracker_service.py
src/jukkabot/cogs/: chat.py  music.py
tests/: test_bot_chat_prompt.py  test_chat_cog.py  test_config.py  test_music_cog.py  test_openai_service.py  test_queue_manager.py  test_tracker_service.py
